# ppAURORA

./: CMakeLists.txt  FIXME.md  LICENSE  README.md  scalability_analysis_exp_result_plotter.ipynb
apps/: helper.cpp
apps/aupr/: proxy.cpp
apps/auroc/: proxy.cpp
apps/auroctie/: proxy.cpp
core/: Party.h  auc.h  core.h
exp_runners/: all_exp.sh  aupr_delta_exp.sh  aupr_num_parties_exp.sh  aupr_num_samples_exp.sh  aupr_unbalanced_exp.sh  auroc_no_tie_delta_exp.sh  auroc_no_tie_num_parties_exp.sh  auroc_no_tie_num_samples_exp.sh  auroc_no_tie_unbalanced_exp.sh  auroc_with_tie_delta_exp.sh  auroc_with_tie_num_parties_exp.sh  auroc_with_tie_num_samples_exp.sh  auroc_with_tie_unbalanced_exp.sh
utils/: auc_utils.h  connection.h  constant.h  flib.h  llib.h  parse_options.cpp  parse_options.h
